@@ -20,6 +20,7 @@ public final class ChangesList {
 		list.add(new ChangeRemoveSearchQueueNodes());
 		list.add(new ChangeReindexAll());
 		list.add(new ChangeSanitizeSchemaJson());
+		list.add(new AddTagFamiliesToNodeIndex());
 		return list;
 	}
 }
